2004-12-08  Andreas Madsack  <bolsog@users.sf.net>

	* translation corrections (de.po)
	* optimize: is(x)digit-usage (char(hex) -> int)
	* enable using Scrollwheel to switch mode
	* code optimizes

2004-12-07  Andreas Madsack  <bolsog@users.sf.net>

	* better solution for eliminating tokens in strings
	* generalizing of eventroutines

2004-12-04  Andreas Madsack  <bolsog@users.sf.net>

	* beta3 released
	
	* Font is now chooseable in preferences
	* program-quit-question-dialog can be disabled :)
	* changed minimum-check for gtk from 2.0 to 2.4
	* fixes for win32 (find pixmaps and locale)
	* more win32 fixes (in cfg, loadconf, ...)
	
2004-12-02  Andreas Madsack  <bolsog@users.sf.net>

	* code-optimize, introduced setcolorlabel / now setting
   	  preferences colors after apply/ok in gui, too
	* set default values if argv[1] is not an parfile
	* introducing Error/Info/YesNo-Dialog-Procedures
	* added MessageDialogs at program-quit, file-was-changed
	* introduced GTK2.4 File-Selector-Dialogs for open and save.
	* updated german (de.po) translations

2004-11-30  Andreas Madsack  <bolsog@users.sf.net>

	* middle mousebutton now inserts a new point
	* disabled possibility to delete first and last point on curve.
	* a few design changes in preferences
	* added defaults-button in preferences

2004-11-29  Andreas Madsack  <bolsog@users.sf.net>

	* free file data after LoadPar-File-Check
	* don't draw x/y-coord when x or y is negative

2004-11-28  Andreas Madsack  <bolsog@users.sf.net>

	* beta2 released
	
	* MAJOR IMPROVEMENT: point-moving 
	  without interference with other points or curves
	* updated german (de.po) translations
	* changed toolbar-default to 'Icons only'
	* toolbar-style changeable in preferences
	* warning fixes in curves.c
	
2004-11-27  Andreas Madsack  <bolsog@users.sf.net>

	* test in LoadPar if File is a par-file
	* test in LoadPar if File has loops (nonlinear timevalues)
	* changing duration changes now maxim-value in all curves
