@@ -1,3 +1,8 @@
+2004-12-13  Andreas Madsack  <bolsog@users.sf.net>
+
+	* realize problem fixed, using temp. config-entries.
+	  [when preferences tab was not selected, wrong info were saved.]
+
 2004-12-08  Andreas Madsack  <bolsog@users.sf.net>
 
 	* translation corrections (de.po)
